<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="empty_message">No Stocks Available</string>
    <string name="instruction_message">Add a stock below to see it listed here.\nSwipe away a stock to remove it.</string>
    <string name="data_message">You\'re all up to date!</string>
    <string name="error_message">Oops! Something went wrong. Please try again.</string>
    <string name="connection_message">Oops! You need a network connection to do that.</string>
    <string name="search_message">Enter the stock symbol you want to add.</string>
    <string name="duplicate_message">You\'ve already added this one.</string>
    <string name="invalid_message">You\'ve entered an invalid stock symbol.</string>
    <string name="remove_message">You\'ve just removed <xliff:g id="stock">%1$s</xliff:g>.</string>
    <string name="timestamp_message">Last updated: <xliff:g id="timestamp">%1$s</xliff:g></string>

    <string name="add_action">ADD</string>
    <string name="remove_action">UNDO</string>

    <string name="search_title">Stock Search</string>
    <string name="search_hint">AAPL</string>
    <string name="search_regex" translatable="false">-.ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>

    <string name="refresh_button_message">Click here to refresh all stocks.</string>
    <string name="add_button_message">Click here to add a stock.</string>
    <string name="stock_item_message"><xliff:g id="symbol">%1$s</xliff:g> for <xliff:g id="name">%2$s</xliff:g> is currently trading at
        <xliff:g id="price">%3$s</xliff:g>, for a change of <xliff:g id="priceDelta">%4$s</xliff:g> and <xliff:g id="percentDelta">%5$s</xliff:g>.</string>

    <string name="close_price_title">Last Close</string>
    <string name="open_price_title">Open</string>
    <string name="day_low_price_title">Day Low</string>
    <string name="day_high_price_title">Day High</string>
    <string name="year_low_price_title">Year Low</string>
    <string name="year_high_price_title">Year High</string>
    <string name="eps_title" translatable="false">EPS</string>
    <string name="peg_ratio_title" translatable="false">P/E</string>
    <string name="volume_title">Volume</string>
    <string name="average_volume_title">Avg Volume</string>
    <string name="market_cap_title">Market Cap</string>
    <string name="timestamp_title">Last Update</string>
</resources>